--- a/style.html
+++ b/style.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <div class="color">aaa</div>
+    <div class="color">aaa</div>
+    <div class="color">aaa</div>
+    <div class="color">aaa</div>
+    <div class="color">aaa</div>
 </body>
 </html>
